// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`settings snapshots > matches order snapshot 1`] = `
<DocumentFragment>
  <main
    class="mint-main-content"
    id="main-content"
    role="main"
    tabindex="-1"
  >
    <div
      class="grid-container"
      data-testid="gridContainer"
    >
      <div
        class="mobile:grid-col-12 tablet:grid-col-12 desktop:grid-col-12"
        data-testid="grid"
      >
        <nav
          aria-label="Breadcrumbs"
          class="usa-breadcrumb usa-breadcrumb--wrap"
        >
          <ol
            class="usa-breadcrumb__list"
          >
            <li
              class="usa-breadcrumb__list-item"
            >
              <a
                class="usa-link usa-breadcrumb__link"
                data-discover="true"
                href="/"
              >
                <span>
                  Home
                </span>
              </a>
            </li>
            <li
              aria-current="page"
              class="usa-breadcrumb__list-item usa-current"
            >
              <span>
                Homepage settings
              </span>
            </li>
          </ol>
        </nav>
        <h1
          class="margin-bottom-2"
        >
          Homepage settings
          <span
            class="font-body-lg text-base text-normal margin-left-2"
          >
            (Step 2 of 2)
          </span>
        </h1>
        <p
          class="font-body-lg margin-top-0 margin-bottom-6"
        >
          Arrange the content however you wish. You can update this at any time.
        </p>
        <h3>
          Set the display order for your homepage.
        </h3>
        <div
          class="mobile:grid-col-12 tablet:grid-col-12 desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="margin-top-8"
          >
            <div
              class="margin-y-10"
              data-testid="page-loading"
            >
              <div
                class="text-center"
              >
                <span
                  aria-busy="true"
                  aria-valuetext="Loading the page"
                  class="mint-spinner mint-spinner--xl"
                  data-testid="spinner"
                  role="progressbar"
                />
              </div>
              <h1
                class="margin-top-6 text-center"
              >
                Loading the page
              </h1>
            </div>
          </div>
        </div>
        <div
          class="display-flex"
        >
          <button
            class="usa-button usa-button--outline margin-bottom-4"
            data-testid="button"
            type="button"
          >
            Back
          </button>
          <button
            class="usa-button margin-bottom-4"
            data-testid="save-settings-order"
            type="submit"
          >
            Save customizations
          </button>
        </div>
        <div
          style="width: fit-content;"
        >
          <a
            class="usa-link display-flex flex-align-center"
            data-discover="true"
            href="/"
          >
            <svg
              aria-label="back"
              class="usa-icon margin-right-2"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
            Don’t customize and return to homepage
          </a>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`settings snapshots > matches setting snapshot 1`] = `<DocumentFragment />`;

exports[`settings snapshots > matches solutions snapshot 1`] = `
<DocumentFragment>
  <main
    class="mint-main-content"
    id="main-content"
    role="main"
    tabindex="-1"
  >
    <div
      class="grid-container"
      data-testid="gridContainer"
    >
      <div
        class="mobile:grid-col-12 tablet:grid-col-12 desktop:grid-col-12"
        data-testid="grid"
      >
        <nav
          aria-label="Breadcrumbs"
          class="usa-breadcrumb usa-breadcrumb--wrap"
        >
          <ol
            class="usa-breadcrumb__list"
          >
            <li
              class="usa-breadcrumb__list-item"
            >
              <a
                class="usa-link usa-breadcrumb__link"
                data-discover="true"
                href="/"
              >
                <span>
                  Home
                </span>
              </a>
            </li>
            <li
              class="usa-breadcrumb__list-item"
            >
              <a
                class="usa-link usa-breadcrumb__link"
                data-discover="true"
                href="/homepage-settings/form"
              >
                <span>
                  Homepage settings
                </span>
              </a>
            </li>
            <li
              aria-current="page"
              class="usa-breadcrumb__list-item usa-current"
            >
              <span>
                Select solutions
              </span>
            </li>
          </ol>
        </nav>
        <h1
          class="margin-bottom-2"
        >
          Select solutions
        </h1>
        <p
          class="font-body-lg margin-top-0 margin-bottom-4"
        >
          Models using the solutions and IT systems chosen below will show in a tabbed section.
        </p>
        <div
          class="margin-top-8"
        >
          <div
            class="margin-y-10"
            data-testid="page-loading"
          >
            <div
              class="text-center"
            >
              <span
                aria-busy="true"
                aria-valuetext="Loading the page"
                class="mint-spinner mint-spinner--xl"
                data-testid="spinner"
                role="progressbar"
              />
            </div>
            <h1
              class="margin-top-6 text-center"
            >
              Loading the page
            </h1>
          </div>
        </div>
        <div
          style="width: fit-content;"
        >
          <a
            class="usa-link display-flex flex-align-center"
            data-discover="true"
            href="/homepage-settings/form"
          >
            <svg
              aria-label="back"
              class="usa-icon margin-right-2"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
            Don’t select solutions and return to previous page
          </a>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
